syntax-analyzer/tests/test_errors1.c
int main() {
    int int a;          // error
    int b = 8;          // error
    int list IL;   // error
    writeln("This is a string");
    // This is a comment
}